# geonkick

./: .gitignore  CMakeLists.txt  README.md
api/: CMakeLists.txt  Makefile
api/src/: audio_output.c  audio_output.h  compressor.c  compressor.h  distortion.c  distortion.h  envelope.c  envelope.h  filter.c  filter.h  geonkick.c  geonkick.h  geonkick_internal.h  gkick_audio.c  gkick_audio.h  gkick_buffer.c  gkick_buffer.h  gkick_jack.c  gkick_jack.h  gkick_log.c  gkick_log.h  oscillator.c  oscillator.h  synthesizer.c  synthesizer.h
data/: CMakeLists.txt  geonkick.desktop  geonkick.xml
examples/: Crash_Long.gkick  Geontime.gkickb  Hit-Hat-FM-Long.gkick  Hit-Hat-Long.gkick  Hit-Hat.gkick  Kick-1_5_2.gkick  Kik-1_5_1.gkick  Snare-1.5_dist.gkick  Snare-1_5.gkick  Snare-1_6_1.gkick
plugin/: CMakeLists.txt
plugin/lv2/: CMakeLists.txt  geonkick_lv2.cpp
plugin/lv2/geonkick.lv2/: geonkick.ttl  manifest.ttl
plugin/vst/: CMakeLists.txt  GKickVstEditor.cpp  GKickVstEditor.h  GKickVstProcessor.cpp  GKickVstProcessor.h  GeonkickVstEffect.cpp  GeonkickVstEffect.h  VstFactory.cpp  VstIds.h  info.rc
src/: about.cpp  about.h  compressor_group_box.cpp  compressor_group_box.h  control_area.cpp  control_area.h  distortion_group_box.cpp  distortion_group_box.h  effects_group_box.cpp  effects_group_box.h  envelope.cpp  envelope.h  envelope_draw_area.cpp  envelope_draw_area.h  envelope_widget.cpp  envelope_widget.h  export_widget.cpp  export_widget.h  file_dialog.cpp  file_dialog.h  filter.cpp  general_envelope.cpp  general_envelope.h  general_group_box.cpp  general_group_box.h  geonkick_api.cpp  geonkick_api.h  geonkick_button.cpp  geonkick_button.h  geonkick_checkbox.cpp  geonkick_checkbox.h  geonkick_groupbox.cpp  geonkick_groupbox.h  geonkick_slider.cpp  geonkick_slider.h  geonkick_state.cpp  geonkick_state.h  geonkick_widget.cpp  geonkick_widget.h  globals.h  (+22 more)
src/resources/: resources.rc
standalone/: CMakeLists.txt  main.cpp
